--- a/src/app/core/components/map/map.component.html
+++ b/src/app/core/components/map/map.component.html
@@ -2,7 +2,7 @@
     class="map__container"
     fxLayout.gt-sm="row"
     fxLayoutGap="2rem"
-    [ngStyle]="{ height: height + 'px' }"
+    [ngStyle]="{ height: height + 'rem' }"
     fxLayout.lt-md="column"
     fxLayoutGap.lt-md="0rem"
     [ngStyle.lt-md]="{ height: 'auto' }"
